# CamouChat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Custom_logger.py  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  contributors.yml  publish.yml
camouchat/: NoOpPattern.py  __init__.py  camouchat_logger.py  directory.py
camouchat/BrowserManager/: __init__.py  browser_config.py  browserforge_manager.py  camoufox_browser.py  profile_info.py  profile_manager.py
camouchat/Decorators/: __init__.py
camouchat/Encryption/: __init__.py
camouchat/Exceptions/: __init__.py  base.py  whatsapp.py
camouchat/Filter/: __init__.py  message_filter.py
camouchat/Interfaces/: __init__.py  browser_interface.py  chat_interface.py  chat_processor_interface.py  human_interaction_controller_interface.py  humanize_operation_interface.py  login_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py  web_ui_selector.py
camouchat/StorageDB/: __init__.py  sqlalchemy_storage.py  storage_type.py
camouchat/WhatsApp/: __init__.py  chat_processor.py  human_interaction_controller.py  humanized_operations.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
camouchat/WhatsApp/DerivedTypes/: Chat.py  Message.py
camouchat/WhatsApp/models/: __init__.py  chat.py  message.py
docs/: Architecture & Key Designs.md  quickstart.md  smoke_test.py
docs/BrowserManager/: BrowserForgeCompatible.md  CamoufoxBrowser.md  ProfileInfo.md  ProfileInfo_&_PlatformManager.md  ProfileManager.md  quickstart.md
docs/DirectoryManager/: DirectoryManager.md
docs/Encryption/: Encryption.md
docs/Exceptions/: Exceptions.md
docs/Filter/: MessageFilter.md
docs/Logger/: Logger.md
docs/NoOpPattern/: NoOpPattern.md
docs/Series/: v_0_6x.md
docs/StorageDB/: SQLAlchemyStorage.md
docs/WhatsApp/: Login.md  MediaCapable.md  ReplyCapable.md  quickstart.md
src/: __init__.py  directory.py
src/BrowserManager/: __init__.py  browser_config.py  browserforge_manager.py  camoufox_browser.py  platform_manager.py  profile_info.py  profile_manager.py
src/Decorators/: __init__.py
src/Encryption/: __init__.py
src/Exceptions/: __init__.py  base.py  whatsapp.py
src/FIlter/: __init__.py  message_filter.py
src/Interfaces/: __init__.py  browser_interface.py  browserforge_capable_interface.py  chat_interface.py  chat_processor_interface.py  humanize_operation_interface.py  login_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py
src/StorageDB/: __init__.py  models.py  sqlalchemy_storage.py
src/WhatsApp/: __init__.py  chat_processor.py  humanized_operations.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
src/WhatsApp/DerivedTypes/: Chat.py  Message.py  __init__.py
tests/: smoke_test.py
tests/unit/BrowserManager/: test_browserforge_manager.py  test_camoufox_browser.py  test_profile_manager.py
tests/unit/Encryption/: test_encryption.py
tests/unit/Exceptions/: test_tweakio_exceptions.py
tests/unit/StorageDB/: test_sqlalchemy_manual.py
tests/unit/WhatsApp/: test_Chat_Processor.py  test_Humanized_Operations.py  test_Login.py  test_Media_Capable.py  test_Message_Processor.py  test_Reply_Capable.py  test_Web_UI_Config.py
