[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweakio-sdk"
version = "0.1.5"
description = "Tweakio-SDK: WhatsApp automation Python library with anti-detection, async storage, and production-grade architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]
maintainers = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]

dependencies = [
    "playwright>=1.40.0",
    "camoufox>=0.3.0",
    "pyperclip>=1.8.2",
    "cryptography>=41.0.0",
    "colorlog>=6.10.1",
    "sqlalchemy>=2.0.48",
    "browserforge>=1.2.4",
    "platformdirs>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "deptry>=0.16.0"
]

[project.urls]
Homepage = "https://github.com/BITS-Rohit/tweakio-sdk"
Repository = "https://github.com/BITS-Rohit/tweakio-sdk"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP001 = ["Quartz"]
