[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camouchat"
version = "0.6"
description = "CamouChat: Anti-detection WhatsApp automation SDK with end-to-end encrypted storage, async SQLite/PostgreSQL, per-profile sandboxing, and human-like browser behaviour"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]
maintainers = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]

keywords = [
    "whatsapp",
    "whatsapp-automation",
    "whatsapp-bot",
    "whatsapp-web",
    "playwright",
    "camoufox",
    "anti-detection",
    "browser-automation",
    "encrypted-storage",
    "aes-256",
    "async",
    "sqlite",
    "postgresql",
    "camouchat",
    "stealth",
    "bypass",
    "chat-bot",
    "agents"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

dependencies = [
    "playwright>=1.40.0",
    "camoufox>=0.3.0",
    "pyperclip>=1.8.2",
    "cryptography>=41.0.0",
    "colorlog>=6.10.1",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.19.0",
    "browserforge>=1.2.4",
    "platformdirs>=4.0.0",
    "filelock>=3.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "deptry>=0.16.0"
]

[project.urls]
Homepage = "https://github.com/BITS-Rohit/camouchat"
Repository = "https://github.com/BITS-Rohit/camouchat"
"Bug Tracker" = "https://github.com/BITS-Rohit/camouchat/issues"
Changelog = "https://github.com/BITS-Rohit/camouchat/releases"

[tool.setuptools]
packages = ["camouchat"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["camouchat"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP001 = ["Quartz", "camouchat", "concurrent_log_handler", "camoufox"]
